Linking GMBA logo to http://www.gmba.unibas.ch/

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -264,7 +264,7 @@ button.selected {
     <div id="map"></div>
     <div class="logos">
       <a href="http://www.mol.org"><img class="logo" src="/img/mol_logo.png"></a>
-      <img class="logo" src="/img/gmba_logo.jpg">
+      <a href="http://www.gmba.unibas.ch"><img class="logo" src="/img/gmba_logo.jpg"></a>
     </div>
     <div id="layer_selector" class="cartodb_infobox">
       <button
